--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,3 +3,15 @@
   grid-template-columns: auto auto;
   width: 40%;
 }
+
+#addButton {
+  width: 150px;
+  height: 50px;
+  border: transparent;
+  border-radius: 25px;
+  background-color: rgba(10, 99, 242);
+  color: white;
+  font-size: 16px;
+  padding: 5px;
+  text-align: center;
+}
