--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -10,16 +10,19 @@
 #table th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: left;
-  background-color: #04aa6d;
-  color: white;
+  text-align: center;
+  color: black;
 }
 #table td,
 #table th {
-  border: 1px solid #ddd;
   padding: 8px;
 }
 
 #table tr:nth-child(even) {
   background-color: #f2f2f2;
+}
+
+#selectDiv {
+  text-align: left;
+  margin: 10px;
 }
